--- a/src/pages/home-page/components/messages-section/MessagesSection.module.css
+++ b/src/pages/home-page/components/messages-section/MessagesSection.module.css
@@ -29,3 +29,13 @@
     color: rgb(255, 255, 255);
     font-size: 16px;
 }
+
+.messagesSection{
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column-reverse;
+
+    box-sizing: border-box;
+}
