--- a/src/pages/home-page/components/message-item/MessageItem.module.css
+++ b/src/pages/home-page/components/message-item/MessageItem.module.css
@@ -1,6 +1,6 @@
 .message{
     width: 100%;
-    min-height: 60px;
+    height: auto;
     margin-bottom: 15px;
 
     display: flex;
@@ -11,7 +11,7 @@
 
 .myMessage{
     width: 100%;
-    min-height: 60px;
+    height: auto;
     margin-bottom: 15px;
 
     display: flex;
@@ -23,7 +23,7 @@
 .messageBody{
     min-width: 250px;
     max-width: 500px;
-    min-height: 70px;
+    min-height: 60px;
 
     margin-left: 50px;
 
@@ -41,11 +41,11 @@
 .myMessageBody{
     min-width: 250px;
     max-width: 500px;
-    min-height: 70px;
+    min-height: 60px;
 
     margin-right: 50px;
 
-    background-color: rgb(60, 84, 148);
+    background-color: rgb(75, 100, 180);
     border-radius: 5px;
 
     display: flex;
@@ -58,7 +58,7 @@
 
 
 .messageValue{
-    min-height: 40px;
+    min-height: 30px;
     width: 100%;
 
     padding: 15px;
@@ -66,6 +66,7 @@
     color: rgb(255, 255, 255);
     font-size: 16px;
     font-family: sans-serif;
+    line-height: 30px;
 
     display: flex;
     align-items: center;
