--- a/src/pages/home-page/components/messages-section/MessagesSection.module.css
+++ b/src/pages/home-page/components/messages-section/MessagesSection.module.css
@@ -10,7 +10,7 @@
 
     position: fixed;
 
-    background-color: rgba(79, 79, 79, 1);
+    background-color: rgb(79, 79, 79);
 
     display: flex;
     align-items: center;
@@ -32,10 +32,68 @@
 
 .messagesSection{
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    
+    overflow-y: scroll;
+    scroll-behavior: smooth;
 
     display: flex;
     flex-direction: column-reverse;
 
+    padding: 75px 0 85px 0;
+
     box-sizing: border-box;
+}
+
+.inputForm{
+    width: 75vw;
+    height: 80px;
+
+    position: fixed;
+    bottom: 0;
+
+    background-color: rgb(79, 79, 79);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    box-sizing: border-box;
+}
+.input{
+    width: 50%;
+    height: 45px;
+
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    color: rgb(79, 79, 79);
+
+    padding: 0 20px;
+
+    box-sizing: border-box;
+}
+
+.input:focus{
+    outline: none;
+}
+
+.input::placeholder{
+    color: rgba(79, 79, 79, 0.8);
+}
+
+.button{
+    width: 45px;
+    height: 45px;
+
+    padding: 0;
+    margin-left: 10px;
+
+    background-color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 5px;
 }
