--- a/src/pages/home-page/components/messages-section/MessagesSection.module.css
+++ b/src/pages/home-page/components/messages-section/MessagesSection.module.css
@@ -10,6 +10,8 @@
 
     position: fixed;
 
+    z-index: 2;
+
     background-color: rgb(79, 79, 79);
 
     display: flex;
@@ -35,7 +37,6 @@
     height: 100%;
     
     overflow-y: scroll;
-    scroll-behavior: smooth;
 
     display: flex;
     flex-direction: column-reverse;
@@ -45,12 +46,49 @@
     box-sizing: border-box;
 }
 
+.inputDiv{
+    position: fixed;
+    bottom: 0;
+
+    z-index: 2;
+}
+
+.replyDiv{
+    width: 75vw;
+    height: 50px;
+
+    background-color: rgb(64, 64, 64);
+
+    padding: 0 10%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+
+    box-sizing: border-box;
+}
+
+.replyValue{
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+}
+
+.cancelReply{
+    width: 20px;
+    height: 20px;
+
+    background: none;
+    border: none;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .inputForm{
     width: 75vw;
     height: 80px;
-
-    position: fixed;
-    bottom: 0;
 
     background-color: rgb(79, 79, 79);
 
@@ -60,6 +98,7 @@
 
     box-sizing: border-box;
 }
+
 .input{
     width: 50%;
     height: 45px;
