--- a/src/pages/home-page/components/message-item/MessageItem.module.css
+++ b/src/pages/home-page/components/message-item/MessageItem.module.css
@@ -145,7 +145,6 @@
 
     z-index: 1;
 
-    height: 100%;
     display: flex;
     align-items: center;
 }
@@ -153,4 +152,42 @@
 .manageDivHidden{
     opacity: 0%;
     z-index: 1;
+}
+
+@media (max-width: 1024px){
+    .messageBody{
+        min-width: 200px;
+        max-width: 400px;
+        margin-left: 25px;
+    }
+    .myMessageBody{
+        min-width: 200px;
+        max-width: 400px;
+        margin-right: 25px;
+    }
+    .manageDivHidden{
+        display: none;
+    }
+}
+
+@media (max-width: 768px){
+    .messageBody{
+        margin-left: 20px;
+    }
+    .myMessageBody{
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 520px) {
+    .messageBody{
+        min-width: 150px;
+        max-width: 300px;
+        margin-left: 15px;
+    }
+    .myMessageBody{
+        min-width: 150px;
+        max-width: 300px;
+        margin-right: 15px;
+    }
 }
