--- a/src/pages/home-page/components/sidebar/Sidebar.module.css
+++ b/src/pages/home-page/components/sidebar/Sidebar.module.css
@@ -47,3 +47,25 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media (max-width: 1024px){
+    .sidebar{
+        width: 30vw;
+    }
+    .userInfo{
+        width: 30vw;
+    }
+}
+
+@media (max-width: 768px){
+    .sidebar{
+        width: 100vw;
+        position: relative;
+    }
+    .userInfo{
+        width: 100vw;
+    }
+    .userList{
+        background-color: rgb(255, 255, 255);
+    }
+}
