--- a/src/pages/home-page/components/messages-section/MessagesSection.module.css
+++ b/src/pages/home-page/components/messages-section/MessagesSection.module.css
@@ -4,6 +4,21 @@
 
     margin-left: 25vw;
 }
+
+.noChatDiv{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.noChatMessage{
+    font-size: 16px;
+    color: rgb(79, 79, 79);
+}
+
 .header{
     width: 75vw;
     height: 60px;
