--- a/src/pages/home-page/components/messages-section/MessagesSection.module.css
+++ b/src/pages/home-page/components/messages-section/MessagesSection.module.css
@@ -1,6 +1,6 @@
 .section{
     width: 75vw;
-    min-height: 100vh;
+    height: 100vh;
 
     margin-left: 25vw;
 }
@@ -56,7 +56,8 @@
     display: flex;
     flex-direction: column-reverse;
 
-    padding: 75px 0 85px 0;
+    padding-bottom: 85px;
+    padding-top: 75px;
 
     box-sizing: border-box;
 }
