--- a/src/pages/home-page/components/message-item/MessageItem.module.css
+++ b/src/pages/home-page/components/message-item/MessageItem.module.css
@@ -20,6 +20,17 @@
     box-sizing: border-box;
 }
 
+.userPhoto{
+    width: 40px;
+    height: 40px;
+
+    border-radius: 100px;
+
+    margin-right: 10px;
+    margin-left: 30px;
+    margin-top: 5px;
+}
+
 .messageBody{
     min-width: 250px;
     max-width: 500px;
@@ -54,6 +65,22 @@
     justify-content:  center;
 
     overflow: hidden;
+    box-sizing: border-box;
+}
+
+.globalMessageBody{
+    min-width: 250px;
+    max-width: 500px;
+    min-height: 60px;
+
+    background-color: rgb(79, 79, 79);
+    border-radius: 5px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content:  center;
+
     box-sizing: border-box;
 }
 
@@ -165,8 +192,15 @@
         max-width: 400px;
         margin-right: 25px;
     }
+    .globalMessageBody{
+        min-width: 200px;
+        max-width: 400px;
+    }
     .manageDivHidden{
         display: none;
+    }
+    .userPhoto{
+        margin-left: 20px;
     }
 }
 
@@ -176,6 +210,9 @@
     }
     .myMessageBody{
         margin-right: 20px;
+    }
+    .userPhoto{
+        margin-left: 15px;
     }
 }
 
@@ -189,5 +226,12 @@
         min-width: 150px;
         max-width: 240px;
         margin-right: 15px;
+    }
+    .globalMessageBody{
+        min-width: 150px;
+        max-width: 240px;
+    }
+    .userPhoto{
+        margin-left: 10px;
     }
 }
