--- a/src/pages/home-page/components/messages-section/MessagesSection.module.css
+++ b/src/pages/home-page/components/messages-section/MessagesSection.module.css
@@ -59,6 +59,8 @@
     padding-bottom: 85px;
     padding-top: 75px;
 
+    background-color: rgb(255, 255, 255);
+
     box-sizing: border-box;
 }
 
